implementing parser in importing supplier price list
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42455

--- a/Vanrise/Code/Vanrise.ExcelConversion.Web/Vanrise.ExcelConversion.Web.csproj
+++ b/Vanrise/Code/Vanrise.ExcelConversion.Web/Vanrise.ExcelConversion.Web.csproj
@@ -129,6 +129,7 @@
     <Folder Include="ExcelConversion\Views\" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ExcelConversion\Constant\ConcatenatedPartTypeEnum.js" />
     <Content Include="ExcelConversion\Constant\FieldTypeEnum.js" />
     <Content Include="ExcelConversion\Constant\ModuleConfig.js" />
     <Content Include="ExcelConversion\Directives\FieldMapping\vr-excelconversion-fieldmapping-selective.js" />
