--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Entities/TOne.WhS.Invoice.Entities.csproj
@@ -66,6 +66,7 @@
     <Compile Include="InvoiceCarrier.cs" />
     <Compile Include="InvoiceCarrierFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RDLCSupplierInvoiceItemDetails.cs" />
     <Compile Include="RDLCCustomerInvoiceItemDetails.cs" />
     <Compile Include="SupplierInvoiceDetails.cs" />
     <Compile Include="SupplierInvoiceItemDetails.cs" />
