--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/TOne.WhS.Invoice.Web.csproj
@@ -230,10 +230,14 @@
     <EmbeddedResource Include="Reports\Zajil\InvoiceReportByCurrency.rdlc" />
     <EmbeddedResource Include="Reports\Zajil\ProfileInvoiceItemsReport.rdlc" />
     <EmbeddedResource Include="Reports\Zajil\ProfileInvoiceReport.rdlc" />
+    <EmbeddedResource Include="WhS_Invoice\Reports\SupplierInvoiceItemsReport.rdlc" />
+    <EmbeddedResource Include="WhS_Invoice\Reports\SupplierInvoiceReport.rdlc" />
     <EmbeddedResource Include="WhS_Invoice\Reports\InvoiceItemsReportByCurrency.rdlc" />
     <EmbeddedResource Include="WhS_Invoice\Reports\CustomerInvoiceItemsReport.rdlc" />
     <EmbeddedResource Include="WhS_Invoice\Reports\InvoiceReportByCurrency.rdlc" />
+    <EmbeddedResource Include="WhS_Invoice\Reports\SupplierProfileInvoiceItemsReport.rdlc" />
     <EmbeddedResource Include="WhS_Invoice\Reports\ProfileInvoiceItemsReport.rdlc" />
+    <EmbeddedResource Include="WhS_Invoice\Reports\SupplierProfileInvoiceReport.rdlc" />
     <EmbeddedResource Include="WhS_Invoice\Reports\ProfileInvoiceReport.rdlc" />
     <EmbeddedResource Include="WhS_Invoice\Reports\CustomerInvoiceReport.rdlc" />
   </ItemGroup>
