add QualityConfiguration for routing classes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42482

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
@@ -74,6 +74,8 @@
     <Compile Include="RouteRuleCriteria\RouteRuleCriteriaConfig.cs" />
     <Compile Include="RouteRuleCriteria\RouteRuleCriteria.cs" />
     <Compile Include="Routes\IFinalizeRouteContext.cs" />
+    <Compile Include="Settings\QualityConfiguration.cs" />
+    <Compile Include="Settings\TechnicalQualityConfiguration.cs" />
     <Compile Include="SpecialRequestRouteRule\SpecialRequestRouteOptionSettings.cs" />
     <Compile Include="ProcessRuleConfig.cs" />
     <Compile Include="RouteOptionRuleConfig.cs" />
