implementing buildng,room,student pages
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42488

--- a/Demo.project/Code/Demo.Module.Data.SQL/Demo.Module.Data.SQL.csproj
+++ b/Demo.project/Code/Demo.Module.Data.SQL/Demo.Module.Data.SQL.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\..\Users\rodi.hassan\Documents\Visual Studio 2013\Projects\students\packages\Newtonsoft.Json.5.0.6\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -55,8 +58,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildingDataManager.cs" />
     <Compile Include="CityDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomDataManager.cs" />
+    <Compile Include="StudentDataManager.cs" />
     <Compile Include="UserDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
