--- a/Demo.project/Code/Demo.Module.Data/Demo.Module.Data.csproj
+++ b/Demo.project/Code/Demo.Module.Data/Demo.Module.Data.csproj
@@ -50,8 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DemoModuleFactory.cs" />
+    <Compile Include="IBuildingDataManager.cs" />
     <Compile Include="ICityDataManager.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IRoomDataManager.cs" />
+    <Compile Include="IStudentDataManager.cs" />
     <Compile Include="IUserDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
