--- a/Demo.project/Code/Demo.Module.Business/Demo.Module.Business.csproj
+++ b/Demo.project/Code/Demo.Module.Business/Demo.Module.Business.csproj
@@ -81,8 +81,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BuildingManager.cs" />
     <Compile Include="CityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomManager.cs" />
+    <Compile Include="StudentManager.cs" />
     <Compile Include="UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
