--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP/TOne.WhS.Deal.BP.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.BP/TOne.WhS.Deal.BP.csproj
@@ -68,8 +68,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
-    <Reference Include="Vanrise.Queueing.BP.Activities">
-      <HintPath>..\..\..\..\BusinessProcess\Code\Vanrise.Queueing.BP.Activities\bin\Debug\Vanrise.Queueing.BP.Activities.dll</HintPath>
+    <Reference Include="Vanrise.Queueing.BP.Activities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.Queueing.BP.Activities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Reprocess.BP.Arguments">
       <HintPath>..\..\..\..\BusinessProcess\Code\Output\Vanrise.Reprocess.BP.Arguments.dll</HintPath>
