--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Arguments/TOne.WhS.Routing.BP.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Arguments/TOne.WhS.Routing.BP.Arguments.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BuildCarrierZoneDetailsInput.cs" />
+    <Compile Include="BuildRoutesByCodePrefixOutput.cs" />
     <Compile Include="BuildSupplierZoneDetailsInput.cs" />
     <Compile Include="BuildCustomerZoneDetailsInput.cs" />
     <Compile Include="BuildRoutesByCodePrefixInput.cs" />
