--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.BP.Arguments/TOne.WhS.RouteSync.BP.Arguments.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.BP.Arguments/TOne.WhS.RouteSync.BP.Arguments.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RouteSyncForRangeProcessOutput.cs" />
     <Compile Include="RouteSyncForRangeProcessInput.cs" />
     <Compile Include="RouteSyncProcessInput.cs" />
   </ItemGroup>
