--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Business/TOne.WhS.RouteSync.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Business/TOne.WhS.RouteSync.Business.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigManager.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteSyncDefinitionManager.cs" />
     <Compile Include="SwitchInfoGetterContext.cs" />
