--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -155,6 +155,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Utils.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Content Include="Client\Javascripts\Directives\Inputs\Select\vr-toolbox-select.html" />
     <Content Include="Client\Javascripts\Services\vr-dragdrop-service.js" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\SecurityController.cs" />
