adding zip file info class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42520

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -273,6 +273,7 @@
     <Compile Include="VRObject\VRObjectTypeDefinitionQuery.cs" />
     <Compile Include="VRObject\VRObjectVariable.cs" />
     <Compile Include="VRRdlcReportParameter.cs" />
+    <Compile Include="Zip\ZipFileInfo.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
