add new implementations for vractions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42532

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -1032,6 +1032,14 @@
       <Project>{b645c1d2-c038-4890-85aa-588fa3c3fc7a}</Project>
       <Name>TOne.WhS.Routing.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Routing.MainExtensions\TOne.WhS.Routing.MainExtensions.csproj">
+      <Project>{57423020-2661-4a4d-98aa-80d07aed6449}</Project>
+      <Name>TOne.WhS.Routing.MainExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Routing.Notification\TOne.WhS.Routing.Notification.csproj">
+      <Project>{b6d08982-f932-40d4-87c9-5802adbb1cc9}</Project>
+      <Name>TOne.WhS.Routing.Notification</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Routing.Web\TOne.WhS.Routing.Web.csproj">
       <Project>{b6df1590-4aa6-4abd-ad8d-02e374696074}</Project>
       <Name>TOne.WhS.Routing.Web</Name>
