--- a/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
+++ b/TOneV2/Code/TOneV2/TestRuntime/TestRuntime.csproj
@@ -1016,6 +1016,14 @@
       <Project>{b645c1d2-c038-4890-85aa-588fa3c3fc7a}</Project>
       <Name>TOne.WhS.Routing.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Routing.MainExtensions\TOne.WhS.Routing.MainExtensions.csproj">
+      <Project>{57423020-2661-4a4d-98aa-80d07aed6449}</Project>
+      <Name>TOne.WhS.Routing.MainExtensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TOne.WhS.Routing.Notification\TOne.WhS.Routing.Notification.csproj">
+      <Project>{b6d08982-f932-40d4-87c9-5802adbb1cc9}</Project>
+      <Name>TOne.WhS.Routing.Notification</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TOne.WhS.Sales.BP.Activities\TOne.WhS.Sales.BP.Activities.csproj">
       <Project>{ba3e1017-95e3-4036-b941-d3f60586064e}</Project>
       <Name>TOne.WhS.Sales.BP.Activities</Name>
