Add SupplierTarget Match
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42533

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -73,6 +73,10 @@
     <Compile Include="CodeComparison\CodeCompareItem.cs" />
     <Compile Include="CodeComparison\CodeCompareItemDetail.cs" />
     <Compile Include="CodeComparison\CodeCompareQuery.cs" />
+    <Compile Include="SupplierTargetMatch\SupplierTargetMatch.cs" />
+    <Compile Include="SupplierTargetMatch\SupplierTargetMatchDetail.cs" />
+    <Compile Include="SupplierTargetMatch\SupplierTargetMatchFilter.cs" />
+    <Compile Include="SupplierTargetMatch\SupplierTargetMatchQuery.cs" />
     <Compile Include="ImportRatePlan\ImportedRowValidationInput.cs" />
     <Compile Include="ImportRatePlan\ImportedRowValidationResult.cs" />
     <Compile Include="ImportRatePlan\InvalidImportedRow.cs" />
