Add ZoneDataByZoneCountryIDs Class
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42535

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Entities/TOne.WhS.Sales.Entities.csproj
@@ -73,6 +73,7 @@
     <Compile Include="CodeComparison\CodeCompareItem.cs" />
     <Compile Include="CodeComparison\CodeCompareItemDetail.cs" />
     <Compile Include="CodeComparison\CodeCompareQuery.cs" />
+    <Compile Include="RateManagement\Zone\ZoneDataByCountryIds.cs" />
     <Compile Include="SupplierTargetMatch\SupplierTargetMatch.cs" />
     <Compile Include="SupplierTargetMatch\SupplierTargetMatchDetail.cs" />
     <Compile Include="SupplierTargetMatch\SupplierTargetMatchFilter.cs" />
