implementing Quality Configurations
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42539

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalyticMeasureInfo.cs" />
     <Compile Include="CodeMatches.cs" />
     <Compile Include="CodeMatchesBatch.cs" />
     <Compile Include="CodePrefix.cs" />
