Partial Routing Process
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42547

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Activities/TOne.WhS.Routing.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Activities/TOne.WhS.Routing.BP.Activities.csproj
@@ -92,6 +92,8 @@
     <Compile Include="BuildCodeMatches.cs" />
     <Compile Include="BuildCustomerRoutes.cs" />
     <Compile Include="CodePrefixRequest.cs" />
+    <Compile Include="PartialRoute\CheckAffectedRulesImpact.cs" />
+    <Compile Include="PartialRoute\LoadAffectedRules.cs" />
     <Compile Include="CreateRoutingDatabase.cs" />
     <Compile Include="FinalizeRouteProcess.cs" />
     <Compile Include="GetCodePrefixGroupDetails.cs" />
