--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Entities/TOne.WhS.Routing.Entities.csproj
@@ -71,6 +71,9 @@
     <Compile Include="IFinalizeRouteOptionContext.cs" />
     <Compile Include="IRPRouteRuleExecutionContext.cs" />
     <Compile Include="ISupplierZoneToRPOptionPolicyExecutionContext.cs" />
+    <Compile Include="PartialRoute\AffectedRouteOptionRules.cs" />
+    <Compile Include="PartialRoute\AffectedRouteRules.cs" />
+    <Compile Include="PartialRoute\PartialRouteProcessState.cs" />
     <Compile Include="RouteBuildInterceptor\RouteBuildInterceptorSettings.cs" />
     <Compile Include="RouteRuleCriteria\RouteRuleCriteriaConfig.cs" />
     <Compile Include="RouteRuleCriteria\RouteRuleCriteria.cs" />
@@ -164,9 +167,7 @@
       <Name>TOne.WhS.BusinessEntity.Entities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
