--- a/Retail/Code/Retail.Runtime/Retail.Runtime.csproj
+++ b/Retail/Code/Retail.Runtime/Retail.Runtime.csproj
@@ -559,6 +559,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappers\MultinetMappers.cs" />
     <Compile Include="Mappers\ZajilMappers.cs" />
     <Compile Include="Tasks\AliAtouiTask.cs" />
     <Compile Include="Tasks\CustomParser.cs" />
