check in sales.business
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C42557

--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -107,6 +107,7 @@
     <Compile Include="BusinessRules\Conditions\Country\NewCountryBEDIsLessThanRetroactiveDateCondition.cs" />
     <Compile Include="BusinessRules\Conditions\Country\NewCountryHasAPendingClosedZoneCondition.cs" />
     <Compile Include="BusinessRules\Conditions\Country\RequiredSellingProductRateCondition.cs" />
+    <Compile Include="BusinessRules\Conditions\Country\SetRateInPastForSPCondition.cs" />
     <Compile Include="BusinessRules\Conditions\CustomerZoneHavingPendingClosedRateIsModified.cs" />
     <Compile Include="BusinessRules\Conditions\CustomerZoneRateBEDIsGreaterThanNewCountryBEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\CustomerZoneRateBEDIsGreaterThanSellingProductZoneRateBEDCondition.cs" />
