--- a/CDRAnalysis/PSTN.BusinessEntity.Web/PSTN.BusinessEntity.Web.csproj
+++ b/CDRAnalysis/PSTN.BusinessEntity.Web/PSTN.BusinessEntity.Web.csproj
@@ -113,7 +113,7 @@
     </Reference>
     <Reference Include="Vanrise.Entities, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Vanrise\Code\Vanrise.Entities\bin\Debug\Vanrise.Entities.dll</HintPath>
+      <HintPath>..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
     <Reference Include="Vanrise.Rules, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
