--- a/Xbooster/Code/CDRComparison.Business/CDRComparison.Business.csproj
+++ b/Xbooster/Code/CDRComparison.Business/CDRComparison.Business.csproj
@@ -85,6 +85,7 @@
     <Compile Include="DisputeCDRManager.cs" />
     <Compile Include="FileCDRSource.cs" />
     <Compile Include="FileCDRSourceManager.cs" />
+    <Compile Include="InvalidCDRManager.cs" />
     <Compile Include="MissingCDRManager.cs" />
     <Compile Include="PartialMatchCDRManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
