--- a/Xbooster/Code/CDRComparison.Data.SQL/CDRComparison.Data.SQL.csproj
+++ b/Xbooster/Code/CDRComparison.Data.SQL/CDRComparison.Data.SQL.csproj
@@ -61,6 +61,7 @@
     <Compile Include="CDRDataManager.cs" />
     <Compile Include="CDRSourceConfigDataManager.cs" />
     <Compile Include="DisputeCDRDataManager.cs" />
+    <Compile Include="InvalidCDRDataManager.cs" />
     <Compile Include="MissingCDRDataManager.cs" />
     <Compile Include="PartialMatchCDRDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
